[package]
name = "users"
version = "0.1.0"
authors = ["EranM6 <eranm6@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.117"
serde_json = "1.0.59"
serde_derive = "1.0.104"
mongodb = "1.1.1"
bson = "1.1.0"
tokio = { version = "0.2", features = ["macros", "rt-threaded"] }
warp = "0.2"
chrono = "0.4.19"
