[package]
name = "gql-rust"
version = "0.1.0"
authors = ["EranM6 <eranm6@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.152"
serde_json = "1.0.91"
serde_derive = "1.0.152"
mongodb = "2.3.1"
bson = { version = "2.4.0", features = ["chrono-0_4"] }
tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.11"
warp = "0.3.3"
chrono = "0.4.23"
http = "0.2.8"
async-graphql = { version = "5.0.4", features = ["chrono", "bson"] }
async-graphql-warp = "5.0.4"
tomlenv = "0.4.2"